--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,25 +53,20 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
               
     # Cache OpenSSL Build to speed up subsequent builds as fips.so should not change often
-    - name: Build Docker Image with cache
+    - name: Build and push Docker Image with cache
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: alpine-node-openssl-fips
       run: |
+        # Create a custom builder to ensure single platform build
+        docker buildx create --name single_platform_builder --driver docker-container --use || docker buildx use single_platform_builder
         docker buildx build \
             --platform=linux/amd64 \
+            --provenance=false \
+            --sbom=false \
             --progress=plain \
             --cache-from=type=local,src=.buildx-cache --cache-to=type=local,dest=.buildx-cache \
-            -t alpine-node-openssl-fips:latest \
             -t ghcr.io/izgateway/alpine-node-openssl-fips:latest \
             -t $ECR_REGISTRY/$ECR_REPOSITORY:${{github.run_number}} \
             -t $ECR_REGISTRY/$ECR_REPOSITORY:latest \
-            --load .
-                      
-    - name: Tag, push and deploy images to Github Repository and ECR
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: alpine-node-openssl-fips
-      run: |
-        docker image push --all-tags ghcr.io/izgateway/alpine-node-openssl-fips
-        docker image push --all-tags $ECR_REGISTRY/$ECR_REPOSITORY
+            --push .
